[package]
name = "matching_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
lob ={ path= "../order_book" }
memmap ={ path= "../memmap" }
anyhow = "1.0.99"
bincode = "1.3.3"
crossbeam = "0.8.4"
chrono = "0.4.41"
serde = {version="1.0.219", features=["derive"] }