[package]
name = "sequencer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.99"
bincode = "1.3.3"
memmap= { path="../memmap" }
core_utils= { path="../core_utils" }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
env_logger = "0.11.8"
log = "0.4.28"
